# x86-on-m1-tests

.github/workflows/: .tests.yml.kate-swp  tests.yml
assembly/examples/: CMakeLists.txt
assembly/examples/src/: arrays.S  functions.S  hello.S  register_usage.S
vslc/include/: emit.h
vslc/src/: generator.c
vslc/vsl_programs/: Makefile
